@@ -27,6 +27,7 @@ Changelog for 1.3.6 [WIP]
 -Added an ability to set a different path for the user directory by command line argument (@Wohlstand)
 -Blocked an ability to start the game with no episodes or battle levels available in the list and prevented several issues with this (@Wohlstand)
 -Disabled 2x texture scale down optimization by default
+-Added the ability to have multiple intro levels per assets pack (if introset directory exists and it contains at least one level file, they will be selected randomly every time when main menu opens)
 
 Changes for 1.3.5.3-1
 -Fixed autostart events behaviour
